[gd_scene format=3 uid="uid://c3r5fagmvqkvn"]

[ext_resource type="Script" uid="uid://b5ilbgg1m3e40" path="res://ScenesScripts/menus/transition.gd" id="1_7lcqf"]
[ext_resource type="Texture2D" uid="uid://d1l010dmifk4p" path="res://Art/UI/dayendscreen2.png" id="2_lxlcv"]
[ext_resource type="FontFile" uid="uid://dedqmdyx263yq" path="res://Art/UI/LoveYaLikeASister-Regular.ttf" id="3_ugp6k"]

[sub_resource type="Animation" id="Animation_lxlcv"]
resource_name = "Fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.99),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ugp6k"]
resource_name = "Fade_in_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_q2mr6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v3eij"]
_data = {
&"Fade_in": SubResource("Animation_lxlcv"),
&"Fade_out": SubResource("Animation_ugp6k"),
&"RESET": SubResource("Animation_q2mr6")
}

[node name="Transition" type="Control" unique_id=1777568651]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7lcqf")

[node name="ScreenGameWin" type="Control" parent="." unique_id=338121669]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TempBG" type="ColorRect" parent="ScreenGameWin" unique_id=1379678627]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 1, 1, 1)

[node name="BG" type="Sprite2D" parent="ScreenGameWin" unique_id=1233043524]
position = Vector2(576, 324)
texture = ExtResource("2_lxlcv")

[node name="Cover" type="ColorRect" parent="ScreenGameWin/BG" unique_id=272542168]
offset_left = -239.0
offset_top = 82.0
offset_right = 233.0
offset_bottom = 179.0
color = Color(0.93333334, 0.9607843, 0.99215686, 1)

[node name="Message" type="RichTextLabel" parent="ScreenGameWin" unique_id=2134211475]
layout_mode = 0
offset_left = 513.0
offset_top = 147.0
offset_right = 699.0
offset_bottom = 216.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_ugp6k")
theme_override_font_sizes/normal_font_size = 48
text = "Victory!"

[node name="Continue" type="RichTextLabel" parent="ScreenGameWin" unique_id=106628619]
layout_mode = 0
offset_left = 449.0
offset_top = 526.0
offset_right = 714.0
offset_bottom = 564.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_ugp6k")
theme_override_font_sizes/normal_font_size = 30
text = "Back to Main Menu"

[node name="CursorContinue" type="RichTextLabel" parent="ScreenGameWin" unique_id=746976164]
layout_mode = 0
offset_left = 385.0
offset_top = 524.0
offset_right = 434.0
offset_bottom = 574.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
text = ">"

[node name="ScreenSuccess" type="Control" parent="." unique_id=1710823239]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TempBG" type="ColorRect" parent="ScreenSuccess" unique_id=1348226247]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 1, 1, 1)

[node name="BG2" type="Sprite2D" parent="ScreenSuccess" unique_id=1238825707]
position = Vector2(576, 324)
texture = ExtResource("2_lxlcv")

[node name="Cover" type="ColorRect" parent="ScreenSuccess/BG2" unique_id=5943387]
offset_left = -239.0
offset_top = 82.0
offset_right = 233.0
offset_bottom = 179.0
color = Color(0.93333334, 0.9607843, 0.99215686, 1)

[node name="Message2" type="RichTextLabel" parent="ScreenSuccess" unique_id=390242782]
layout_mode = 0
offset_left = 505.0
offset_top = 144.0
offset_right = 691.0
offset_bottom = 213.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_ugp6k")
theme_override_font_sizes/normal_font_size = 48
text = "Success"

[node name="Continue" type="RichTextLabel" parent="ScreenSuccess" unique_id=964716775]
layout_mode = 0
offset_left = 512.0
offset_top = 524.0
offset_right = 647.0
offset_bottom = 571.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_ugp6k")
theme_override_font_sizes/normal_font_size = 30
text = "Continue"

[node name="CursorContinue" type="RichTextLabel" parent="ScreenSuccess" unique_id=435352219]
layout_mode = 0
offset_left = 401.0
offset_top = 520.0
offset_right = 450.0
offset_bottom = 570.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
text = ">"

[node name="ScreenFail" type="Control" parent="." unique_id=876510998]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TempBG" type="ColorRect" parent="ScreenFail" unique_id=1600413715]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 1, 1, 1)

[node name="BG3" type="Sprite2D" parent="ScreenFail" unique_id=1767697987]
position = Vector2(576, 324)
texture = ExtResource("2_lxlcv")

[node name="Cover" type="ColorRect" parent="ScreenFail/BG3" unique_id=2078872153]
visible = false
offset_left = -239.0
offset_top = 82.0
offset_right = 233.0
offset_bottom = 179.0
color = Color(0.93333334, 0.9607843, 0.99215686, 1)

[node name="Message3" type="RichTextLabel" parent="ScreenFail" unique_id=918849527]
layout_mode = 0
offset_left = 511.0
offset_top = 144.0
offset_right = 697.0
offset_bottom = 213.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_ugp6k")
theme_override_font_sizes/normal_font_size = 48
text = "Failure"

[node name="Quit" type="RichTextLabel" parent="ScreenFail" unique_id=90715209]
layout_mode = 0
offset_left = 486.0
offset_top = 523.0
offset_right = 640.0
offset_bottom = 570.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_ugp6k")
theme_override_font_sizes/normal_font_size = 30
text = "Main Menu"

[node name="CursorQuit" type="RichTextLabel" parent="ScreenFail" unique_id=343564896]
layout_mode = 0
offset_left = 429.0
offset_top = 521.0
offset_right = 478.0
offset_bottom = 571.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
text = ">"

[node name="Retry" type="RichTextLabel" parent="ScreenFail" unique_id=1567081794]
layout_mode = 0
offset_left = 522.0
offset_top = 441.0
offset_right = 619.0
offset_bottom = 492.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_ugp6k")
theme_override_font_sizes/normal_font_size = 30
text = "Retry"

[node name="CursorRetry" type="RichTextLabel" parent="ScreenFail" unique_id=1962060290]
layout_mode = 0
offset_left = 433.0
offset_top = 435.0
offset_right = 482.0
offset_bottom = 485.0
theme_override_colors/font_outline_color = Color(0.09019608, 0.28627452, 0.4862745, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
text = ">"

[node name="Curtain" type="ColorRect" parent="." unique_id=1127060196]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=904137952]
libraries/ = SubResource("AnimationLibrary_v3eij")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
